Style tweaks, mainly get content to stop overflowing

--- a/app/styles/modal/create-account-modal/create-account-modal.sass
+++ b/app/styles/modal/create-account-modal/create-account-modal.sass
@@ -16,7 +16,6 @@
   .modal-content
     display: flex
     flex-direction: column
-    height: 90vh
     min-height: 550px
     max-height: 850px
     width: 850px
@@ -83,6 +82,7 @@
     flex-direction: column
     align-items: center
     justify-content: center
+    padding: 20px 0
     
   // Back/forward buttons
   
